--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,9 @@ android {
 
     buildTypes {
         debug {
-            minifyEnabled true
-            zipAlignEnabled true
-            shrinkResources true
+            minifyEnabled false
+            zipAlignEnabled false
+            shrinkResources false
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -67,6 +67,7 @@ dependencies {
     compile files('libs/jpush-android-3.0.8.jar')
     compile files('libs/libammsdk.jar')
     compile files('libs/alipaySdk-20170725.jar')
+    //    compile 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.zhy:autolayout:1.4.5'
     compile 'com.github.hackware1993:MagicIndicator:1.5.0'
@@ -91,7 +92,6 @@ dependencies {
     compile 'com.chanven.lib:cptr:1.1.0'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.bigkoo:convenientbanner:2.0.5'
-//    compile 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'liji.library.dev:citypickerview:1.1.0'
     compile 'com.github.YancyYe:GalleryPick:1.2.1'
