--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -234,6 +234,8 @@
             android:screenOrientation="portrait" />
         <activity android:name=".ui.activity.MemberCardStateActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".ui.activity.CaptureActivity"
+            android:screenOrientation="portrait" />
 
         <receiver android:name=".receiver.NetReceiver">
             <intent-filter>
