--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -232,9 +232,17 @@
         <activity
             android:name=".ui.activity.ProjectJoinActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.activity.MemberCardStateActivity"
+        <activity
+            android:name=".ui.activity.MemberCardStateActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.activity.CaptureActivity"
+        <activity
+            android:name=".ui.activity.CaptureActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.activity.CourseListActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.activity.ProjectTeamDetailActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.activity.ProjectWorkDetailActivity"
             android:screenOrientation="portrait" />
 
         <receiver android:name=".receiver.NetReceiver">
