--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -115,6 +115,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.TrendCommentsActivity"
+            android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.TutorClassCategoryActivity"
