--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -254,6 +254,12 @@
         <activity
             android:name=".ui.activity.ScheduleOrderListActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.MemberCouponListActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.activity.WorkProjectCommentActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|stateUnchanged|adjustPan" />
 
         <receiver android:name=".receiver.NetReceiver">
             <intent-filter>
@@ -466,8 +472,7 @@
             android:value="45cff4eb5903e8d0b616362e" /> <!-- </>值来自开发者平台取得的AppKey -->
         <!-- JPush end -->
 
-        <activity android:name=".ui.activity.MemberCouponListActivity"
-            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
