--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -257,9 +257,12 @@
         <activity
             android:name=".ui.activity.MemberCouponListActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.activity.WorkProjectCommentActivity"
+        <activity
+            android:name=".ui.activity.WorkProjectCommentActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|stateUnchanged|adjustPan" />
+        <activity android:name=".ui.activity.WorkProjectTeamPhotoActivity"
+            android:screenOrientation="portrait" />
 
         <receiver android:name=".receiver.NetReceiver">
             <intent-filter>
