--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -338,7 +338,7 @@
         <!-- 渠道商编号 -->
         <meta-data
             android:name="BaiduMobAd_CHANNEL"
-            android:value="develop" />
+            android:value="default" />
 
         <!-- 是否开启错误日志统计，默认为false -->
         <meta-data
