--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,9 @@ android {
 
     buildTypes {
         debug {
-            minifyEnabled true
-            zipAlignEnabled true
-            shrinkResources true
+            minifyEnabled false
+            zipAlignEnabled false
+            shrinkResources false
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -106,4 +106,5 @@ dependencies {
     compile 'com.github.chrisbanes.photoview:library:1.2.4'
     apt 'com.google.dagger:dagger-compiler:2.0.2'
     provided 'javax.annotation:jsr250-api:1.0'
+    compile 'com.zzhoujay.richtext:richtext:2.5.4'
 }
