--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "cn.com.mangopi.android"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.1"
         multiDexEnabled true
     }
 
@@ -20,6 +20,8 @@ android {
         }
 
         release {
+            v1SigningEnabled true
+            v2SigningEnabled true
             storeFile file("mango.jks")
             storePassword "mango123456"
             keyAlias "mango"
